// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueFilingButtonTest test with stateToToggle = showHelpText render with needs more info content showing 1`] = `
"<Fragment>
  <CustomizedDefaultButton className=\\"create-bug-button\\" target=\\"_blank\\" onClick={[Function: onClick]} href=\\"test url\\">
    <LadyBugSolidIcon />
    <div className=\\"ms-Button-label\\">
      File issue
    </div>
  </CustomizedDefaultButton>
  <IssueFilingDialog deps={{...}} isOpen={false} selectedBugFilingService={{...}} selectedBugData={{...}} selectedBugFilingServiceData={[undefined]} onClose={[Function: bound ]} bugFileTelemetryCallback={[Function: bound ]} />
  <div role=\\"alert\\" aria-live=\\"polite\\" className=\\"create-bug-button-help\\">
    Go to Settings to configure issue filing.
  </div>
</Fragment>"
`;

exports[`IssueFilingButtonTest test with stateToToggle = showHelpText render: isSettingsValid: false 1`] = `
"<Fragment>
  <CustomizedDefaultButton className=\\"create-bug-button\\" target=\\"_self\\" onClick={[Function: onClick]} href={{...}}>
    <LadyBugSolidIcon />
    <div className=\\"ms-Button-label\\">
      File issue
    </div>
  </CustomizedDefaultButton>
  <IssueFilingDialog deps={{...}} isOpen={false} selectedBugFilingService={{...}} selectedBugData={{...}} selectedBugFilingServiceData={[undefined]} onClose={[Function: bound ]} bugFileTelemetryCallback={[Function: bound ]} />
</Fragment>"
`;

exports[`IssueFilingButtonTest test with stateToToggle = showHelpText render: isSettingsValid: true 1`] = `
"<Fragment>
  <CustomizedDefaultButton className=\\"create-bug-button\\" target=\\"_blank\\" onClick={[Function: onClick]} href=\\"test url\\">
    <LadyBugSolidIcon />
    <div className=\\"ms-Button-label\\">
      File issue
    </div>
  </CustomizedDefaultButton>
  <IssueFilingDialog deps={{...}} isOpen={false} selectedBugFilingService={{...}} selectedBugData={{...}} selectedBugFilingServiceData={[undefined]} onClose={[Function: bound ]} bugFileTelemetryCallback={[Function: bound ]} />
</Fragment>"
`;

exports[`IssueFilingButtonTest test with stateToToggle = showSettingsDialog render with needs more info content showing 1`] = `
"<Fragment>
  <CustomizedDefaultButton className=\\"create-bug-button\\" target=\\"_blank\\" onClick={[Function: onClick]} href=\\"test url\\">
    <LadyBugSolidIcon />
    <div className=\\"ms-Button-label\\">
      File issue
    </div>
  </CustomizedDefaultButton>
  <IssueFilingDialog deps={{...}} isOpen={true} selectedBugFilingService={{...}} selectedBugData={{...}} selectedBugFilingServiceData={[undefined]} onClose={[Function: bound ]} bugFileTelemetryCallback={[Function: bound ]} />
</Fragment>"
`;

exports[`IssueFilingButtonTest test with stateToToggle = showSettingsDialog render: isSettingsValid: false 1`] = `
"<Fragment>
  <CustomizedDefaultButton className=\\"create-bug-button\\" target=\\"_self\\" onClick={[Function: onClick]} href={{...}}>
    <LadyBugSolidIcon />
    <div className=\\"ms-Button-label\\">
      File issue
    </div>
  </CustomizedDefaultButton>
  <IssueFilingDialog deps={{...}} isOpen={false} selectedBugFilingService={{...}} selectedBugData={{...}} selectedBugFilingServiceData={[undefined]} onClose={[Function: bound ]} bugFileTelemetryCallback={[Function: bound ]} />
</Fragment>"
`;

exports[`IssueFilingButtonTest test with stateToToggle = showSettingsDialog render: isSettingsValid: true 1`] = `
"<Fragment>
  <CustomizedDefaultButton className=\\"create-bug-button\\" target=\\"_blank\\" onClick={[Function: onClick]} href=\\"test url\\">
    <LadyBugSolidIcon />
    <div className=\\"ms-Button-label\\">
      File issue
    </div>
  </CustomizedDefaultButton>
  <IssueFilingDialog deps={{...}} isOpen={false} selectedBugFilingService={{...}} selectedBugData={{...}} selectedBugFilingServiceData={[undefined]} onClose={[Function: bound ]} bugFileTelemetryCallback={[Function: bound ]} />
</Fragment>"
`;
